--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Compiled class file
+# Compiled class files
 *.class
+out/
 
 # Log file
 *.log
@@ -18,6 +19,16 @@
 *.zip
 *.tar.gz
 *.rar
+
+# Gradle
+.gradle/
+build/
+
+# IntelliJ
+.idea/
+
+# test data
+test-data/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
