--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'java'
     id 'jacoco'
+    id 'nebula.release' version '13.0.0'
 }
 
 group 'io.github.stefan-ka'
-version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
