--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,7 @@
+# Publication repos
+ossSnapshotRepository=https://oss.sonatype.org/content/repositories/snapshots/
+ossReleaseStagingRepository=https://oss.sonatype.org/service/local/staging/deploy/maven2/
+
+# Dependency versions
 jUnitVersion=5.6.2
 freemarkerVersion=2.3.30
