Disable gradle *.module file publication

--- a/build.gradle
+++ b/build.gradle
@@ -140,6 +140,10 @@ def customizePom(pom) {
     }
 }
 
+tasks.withType(GenerateModuleMetadata) {
+    enabled = false
+}
+
 test {
     useJUnitPlatform()
 }
